# pushover.github.io

./: .gitignore  AUTHORS  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  index.html  pushover.6  pushover.desktop  readme.txt
data/sources/: assembler.c  assembler.cpp  assembler_compiler  carried.ini  carried.pov  carried_assemble  carried_render  domino.ini  domino.pov  dominoes.lst  dominos.lst  dominos_assemble  dominos_render  pngsaver.h  shapes.pov
levels/av/: crash.level  crashed_again.level  dominik1.level  dominik10.level  dominik2.level  dominik3.level  dominik4.level  dominik5.level  dominik6.level  dominik7.level  dominik_01.level  dominik_02.level  dominik_03.level  dominik_04.level  dominik_05.level  dominik_06.level  dominik_08.level  dominik_09.level  dominik_10.level  dominik_11.level  dominik_12.level  dominik_14.level  dominik_15.level  easy_distance.level  hard_distance.level  index.level  merger.level  missing_quantum.level  missing_stopper.level  missing_stopper_2.level  one_last_crash.level  one_too_much.level  out_of_reach.level  quantum_theory.level  quantum_theory2.level  quantum_timing.level  run.level  run_n_bridge.level  still_too_easy.level  too_easy.level  (+1 more)
levels/original/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  019.level  020.level  021.level  022.level  023.level  024.level  025.level  026.level  027.level  028.level  029.level  030.level  031.level  032.level  033.level  034.level  035.level  036.level  037.level  038.level  039.level  040.level  (+63 more)
po/: Makevars  POTFILES.in  cs.po  de.po  eo.po  es.po  fr.po  it.po  ru.po  sv.po
recordings/crash/: TwoRisersClash.rec
recordings/fail/: dominik_10_a.rec
recordings/finish/av/: crashed_again_a.rec  dominik_02_a.rec  dominik_06_b.rec  dominik_07_a.rec  dominik_08_a.rec  dominik_10_b.rec  dominik_13_a.rec  dominik_14_a.rec
recordings/finish/original/: 003_o.rec  005_a.rec  006_o.rec  007_o.rec  011_a.rec  013_o.rec  016_a.rec  018_a.rec  022_a.rec  025_a.rec  028_o.rec  033_a.rec  036_a.rec  037_o.rec  038_a.rec  041_o.rec  052_o.rec  056_a.rec  057_o.rec  060_o.rec  061_a.rec  061_o.rec  064_b.rec  066_a.rec  079_a.rec  082_a.rec  082_o.rec  091_a.rec  091_b.rec  095_a.rec  095_b.rec
recordings/finished/: 01_a.rec  01_b.rec  02_a.rec  03_a.rec  04_a.rec  05_a.rec  06_a.rec  07_a.rec  08_a.rec  09_a.rec  10_a.rec  11_a.rec  12_a.rec  13_a.rec  14_a.rec  15_a.rec  16_a.rec  17_a.rec  18_a.rec  19_a.rec  20_a.rec  21_a.rec  22_a.rec  23_a.rec  24_a.rec  25_a.rec  26_a.rec  27_a.rec  28_a.rec  29_a.rec  30_a.rec  31_a.rec  32_a.rec  33_a.rec  34_a.rec  34_b.rec  35_a.rec  36_a.rec  37_a.rec  38_a.rec  (+161 more)
recordings/finished/av/: crash_a.rec  dominik1_a.rec  dominik1_b.rec  dominik2_b.rec  dominik3_a.rec  dominik3_b.rec  dominik4_a.rec  dominik4_b.rec  dominik5_a.rec  dominik6_a.rec  dominik7_a.rec  dominik7_b.rec  dominik9_a.rec  dominik_09_a.rec  dominik_11_a.rec  dominik_12_a.rec  merger_a.rec  missing_stopper_2_b.rec  missing_stopper_b.rec  one_last_crash_a.rec  one_too_much_a.rec  out_of_reach_a.rec  quantum_theory_2.rec  quantum_timing.rec  run_n_bridge_a.rec  still_too_easy_a.rec
recordings/finished/original/: 001_o.rec  002_o.rec  004_a.rec  006_a.rec  011_o.rec  012_o.rec  014_o.rec  017_a.rec  017_o.rec  018_a.rec  018_o.rec  019_a.rec  019_o.rec  021_a.rec  023_a.rec  023_o.rec  024_o.rec  025_o.rec  027_o.rec  029_a.rec  030_o.rec  031_a.rec  034_o.rec  035_o.rec  037_a.rec  038_o.rec  039_o.rec  042_o.rec  044_a.rec  045_a.rec  045_o.rec  047_a.rec  047_o.rec  048_o.rec  050_o.rec  053_o.rec  054_o.rec  055_o.rec  057_o.rec  058_b.rec  (+28 more)
recordings/mustCrash/: RiserAndFalling.rec  TwoRisersClash.rec
recordings/mustFail/: 064_o.rec
src/: ant.cpp  ant.h  check.cpp  check.h  colors.h  decompress.cpp  decompress.h  editor.cpp  editor.h  graphics.cpp  graphics.h  graphicsn.cpp  graphicsn.h  graphicso.cpp  graphicso.h  level.cpp  level.h  leveldata.cpp  leveldata.h  leveldisplay.cpp  leveldisplay.h  levelplayer.cpp  levelplayer.h  levelsections.cpp  levelsections.h  levelset.cpp  levelset.h  luaclass.cpp  luaclass.h  main.cpp  pngloader.cpp  pngloader.h  recorder.cpp  recorder.h  screen.cpp  screen.h  sha1.cpp  sha1.h  solvedmap.cpp  solvedmap.h  (+13 more)
src/description/: pushover.6  pushover.appdata.xml  pushover.desktop
src/dominoes/: assembler.cpp  domino.ini  domino.pov  dominoes.lst
src/levels/av/: crash.level  crashed_again.level  dominik_01.level  dominik_07.level  dominik_11.level  dominik_12.level  dominik_13.level  easy_distance.level  hard_distance.level  merger.level  missing_quantum.level  missing_stopper_2.level  one_last_crash.level  one_too_much.level  quantum_theory_2.level  wrong_direction.level
src/levels/original/: 001.level  005.level  006.level  007.level  009.level  010.level  012.level  013.level  014.level  015.level  017.level  019.level  020.level  021.level  022.level  023.level  026.level  028.level  029.level  034.level  035.level  036.level  037.level  038.level  039.level  040.level  041.level  044.level  045.level  046.level  049.level  (+32 more)
src/po/: cs.po  de.po  eo.po  es.po  fr.po  it.po  ru.po  sv.po
src/pushover/: ant.cpp  ant.h  check.cpp  check.h  colors.h  editor.cpp  editor.h  graphics.h  graphicsn.cpp  graphicsn.h  leveldata.cpp  leveldata.h  leveldata_oldsave.cpp  levelplayer.cpp  levelplayer.h  levelset.cpp  levelset.h  luaclass.cpp  luaclass.h  main.cpp  pngloader.cpp  pngloader.h  recorder.cpp  recorder.h  screen.cpp  screen.h  solvedmap.cpp  solvedmap.h  soundsys.cpp  soundsys.h  textsections.cpp  textsections.h  tools.cpp  tools.h  window.cpp  window.h  window_help.cpp  window_input.cpp
src/sha1/: sha1.cpp  sha1.hpp
src/themes/: aztec.lua  cavern.lua  dungeon.lua  electro.lua
themes/: aztec.lua  castle.lua  cavern.lua  dungeon.lua  electro.lua  greek.lua  japanese.lua  mechanic.lua  space.lua  tools.lua  toxcity.lua
website/styles/: formate.css
(+78 files in other folders)
